update ES manager
update

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,6 @@
 baseURL = "https://dr-kyle.github.io/"
+# include content marked as draft
+buildDrafts = false
 languageCode = "zh-cn"
 defaultContentLanguage = "zh-cn"                             # en / zh-cn / ... (This field determines which i18n file to use)
 title = "Kyle Blog"
